--- a/style.css
+++ b/style.css
@@ -59,7 +59,7 @@ html, body{
     background-color: rgba(255,255,255,0.5);
     padding-top: 10px;
     padding-bottom: 10px;
-    color: rgba(0, 0, 0, .7);
+    color: rgba(0, 0, 0, 1);
 }
 
 .select-audio-content{
@@ -70,6 +70,7 @@ html, body{
 
 .select-audio-content select{
     background-color: rgba(255, 255, 255, .3);
+    border: 1px solid black
 }
 
 .select-audio-content .audio-list{
@@ -97,7 +98,7 @@ html, body{
     border-radius: 10px;
     border: none;
     outline: none;
-    color: gray;
+    color: black;
     font-size: 1rem;
 }
 
